--- a/src/style.css
+++ b/src/style.css
@@ -1,36 +1,52 @@
+:root {
+    --brand-color: #6c63ff;
+    --heading-font-family: 'Playfair Display', serif;
+    --default-font-family: 'Poppins', sans-serif;
+    --pirmary-color: #f9f7fe;
+}
 
+body {
+    font-family: var(--default-font-family);
+}
 
 h1 h2 h3 h4 h5 {
     color: black;
+    font-family: var(--heading-font-family);
     font-weight: bold;
 }
-h2{
+
+h2 {
     font-size: 96px;
 }
+
 p {
-   
+    font-family: var(--default-font-family);
     font-weight: normal;
 }
-.content{
-    
+
+.content {
+    background-color: var(--pirmary-color);
     text-align: center;
     padding: 160px 20px;
 }
-.content p {
 
-font-size: 36px;
-font-weight: bold;
-margin: 0;
-color: #272142;
+.content p {
+    font-family: var(--heading-font-family);
+    font-size: 36px;
+    font-weight: bold;
+    margin: 0;
+    color: #272142;
 }
-.content h1{
-   
+
+.content h1 {
+    font-family: var(--default-font-family);
     font-weight: normal;
     font-size: 24px;
     line-height: 2;
 }
-.btn-brand{
-   
+
+.btn-brand {
+    background: var(--brand-color);
     border-radius: 4px;
     color: white;
     font-size: 18px;
