--- a/src/style.css
+++ b/src/style.css
@@ -94,6 +94,32 @@ line-height: 1.5;
 .dis-project {
     padding: 120px 60px;
 }
+nav{
+    padding: 40px 0;
+}
+nav ul {
+ padding: 0;
+ margin: 0;
+}
+nav li{
+    display: inline;
+    list-style: none;
+    line-height: 40px;
+    margin-left: 20px;
+}
+nav a{
+    text-decoration: none;
+    color: #272142;
+    transition: all 150ms ease-in-out;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+
+nav a:hover,
+nav li.active a{
+    color: var(--primary-color);
+}
 
 @media (max-width: 900px) {
     h1 {
